instagram.user.css
/* ==UserStyle==
@name         Instagram Dark/Light Mode
@description  A proper dark mode for Instagram web version
@namespace    https://github.com/unigazer
@author       Vladimir Jovanovic <me@vladio.me> (https://vladio.me)
@homepageURL  https://github.com/unigazer/instagram-dark-mode
@supportURL   https://github.com/unigazer/instagram-dark-mode/issues
@updateURL    https://userstyles.world/api/style/4465.user.css
@version      3.0.8
@preprocessor stylus
@var color    linkColor  "Link color"   #fafafa
@var checkbox	animationToggle "Enable animations"	1
@var select		theme "Theme" ["dark:Dark theme", "light:Light theme", "system:System theme"]
==/UserStyle== */
@-moz-document domain("instagram.com") {
  :root {
    --dark: #1c1c1c;
    --darker: #111;
    --border-color: #2d2d2d;
    --text-color: #bfbfbf;
    --text-color-visited: #9f9f9f;
  }

  /* General */
  .x1uvtmcs.x4k7w5x.x1h91t0o.x1beo9mf.xaigb6o.x12ejxvf.x3igimt.xarpa2k.xedcshv.x1lytzrv.x1t2pt76.x7ja8zs.x1n2onr6.x1qrby5j.x1jfb8zj {
    backdrop-filter: blur(12px);
  }

  ._aak3 {
    margin-top: 3rem;
  }

  /* Sidebar */
  ._aak6 {
    position: sticky;
    top: calc(30px + var(--desktop-nav-height));
  }

  if (animationToggle) {
    ._ab6k,
    ._ab70,
    ._aabd._aa8k._aanf {
      animation: fadeIn 300ms linear;
    }

    .x14vhib7 {
      animation: pulse-highlight-red 2s infinite;
    }

    @keyframes fadeIn {
      0% {
        opacity: 0;
      }

      100% {
        opacity: 1;
      }
    }

    @keyframes pulse-highlight-red {
      0% {
        box-shadow: 0 0 0 0 rgba(255, 48, 64, 0.4)
      }

      70% {
        box-shadow: 0 0 0 10px transparent
      }

      100% {
        box-shadow: 0 0 0 0 transparent
      }
    }
  }

  svg[aria-label="Like"] {
    fill: #ed4956;
  }

  svg[aria-label="Unlike"] {
    fill: #ed4956;
    filter: drop-shadow(0 0 10px #ed4956);
  }

  /* Layout (main) */
  ._aalx {
    margin-left: calc(100vw - 85vw);
  }

  ._aam2 {
    max-width: 35vw;
  }

  /* Dark */
  darkStyling() {
    body._a3wf,
    .xnz67gz {
      background: var(--darker);
    }

    /* Login page */
    ._a995 {
      background: var(--dark);
    }

    ._ab21 {
      background: var(--darker);
      border: 1px solid var(--border-color);
    }

    ._abc5 > div:nth-child(1) > i[aria-label="Instagram"] {
      filter: invert(1);
    }

    /* OTP login */
    ._ab3c {
      color: var(--text-color);
    }

    input._add6 {
      background: var(--dark);
      color: var(--text-color);
    }

    form._ab3i > div > div {
      border: 1px solid var(--border-color);
    }

    form._ab3i > div > div > div {
      display: none;
    }

    /* Text */
    ._aacx {
      color: var(--text-color);
    }

    ._acao._acat,
    ._aacx a,
    a._acao._acat,
    a._acao._acat:visited,
    .x1i10hfl {
      color: linkColor;
      font-weight: 700;
    }

    /* Icons */
    svg {
      fill: #fff;
      color: #fff;
    }

    /* Sidebar */
    .x1o5hw5a.x1o5hw5a,
    .xvb8j5 {
      background-color: var(--dark);
    }

    ._acan._acap._acat {
      border: 2px solid var(--border-color);
      color: var(--text-color);
    }

    .xvb8j5 {
      border-right: 1px solid var(--border-color);
    }

    .x1xgvd2v,
    .x1l895ks:hover,
    ._acan._acap._acat {
      background-color: var(--darker);
    }

    .x1n2onr6,
    ._aacw {
      color: var(--text-color);
    }

    .xvs91rp {
      color: linkColor;
    }

    hr.x11mr3az {
      background-color: var(--border-color);
    }

    .x14vhib7 {
      border: none;
    }

    /* Stories timeline */
    ._aac6 {
      background: var(--dark);
      border: 1px solid var(--border-color);
    }

    /* New Posts button */
    ._a9-r {
      background: var(--darker);
      color: var(--text-color);
      box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 16px 0px,
      rgba(0, 0, 0, 0.05) 0px 0px 4px 0px;
    }

    /* Timeline */
    ._aam1 {
      background: var(--darker);
    }

    /* Timeline posts */
    ._ab6k,
    ._ab6s,
    ._aatc ._aasi,
    ._ae-j,
    ._aa2b {
      background-color: var(--dark);
    }

    ._ab6k,
    ._ab6s,
    ._ae-j {
      border: 1px solid var(--border-color);
    }

    ._ae3w {
      border-left: 1px solid var(--border-color);
    }

    ._aaoe {
      border-top: 1px solid var(--border-color);
    }

    ._aa26 {
      border-bottom: 1px solid var(--border-color);
    }

    ._aasi {
      border-bottom: none;
    }

    a._aaqk,
    a._aaqk:visited {
      color: linkColor;
    }

    ._aatk {
      background-color: unset;
    }

    ._aa27,
    ._aa29,
    ._aa2a {
      background-color: var(--darker);
    }

    /* Timeline posts (comments) */
    ._ae1i,
    article._ab6k textarea,
    ._ae2s._ae3v._ae3w > section._aaoe._ae5y._ae5z._ae62 > div > form > textarea,
    section._aaoe._ae5y._ae5z._ae62,
    ._aaoe._ae5y._ae5_._ae60._ae62 {
      background-color: var(--darker);
      color: var(--text-color);
    }

    article._ab6k section {
      color: var(--text-color);
      border-bottom-left-radius: 8px;
      border-bottom-right-radius: 8px;
    }

    ._ae63 {
      border-top: 1px solid var(--border-color);
    }

    /* Timeline posts (focused) */
    ._aatg ._aasi,
    ._ae3w,
    ._ae65 > div > ._ae1k._ae2q._ae2r {
      background-color: var(--dark);
    }

    ._aatg._aati ._aasi {
      border-left: 1px solid var(--border-color);
      border-bottom: 1px solid var(--border-color);
    }

    ._ae5r,
    ._ae1j {
      background-color: var(--dark);
    }

    ._ae47 {
      border-top: 1px solid var(--border-color);
    }

    ._aa6e ._aa6a {
      border: 2px solid var(--border-color);
    }

    /* Personal profile card */
    ._aak1,
    ._aak1:visited {
      color: linkColor;
      font-weight: 700;
    }

    /* Suggestion for you */
    ._aak3,
    ._ab8q {
      background-color: var(--dark);
    }

    ._aak3 {
      border: 1px solid var(--border-color);
      border-radius: 8px;
    }

    ._aba7 {
      padding: 1rem;
    }

    /* Profile */
    ._ab8w._ab94._ab99._ab9f._ab9k._ab9p._abcm > ._ab8w._ab94._ab99._ab9f._ab9k._ab9p._abcm button {
      border: 2px solid var(--border-color);
      color: var(--text-color);
    }

    ._acas:not(._acao),
    a._acas:not(._acao),
    a._acas:not(._acao):visited,
    ._acas:not(._acao) > div > div {
      border: 1px solid transparent !important;
      color: #fff !important;
    }

    ._ac2a {
      color: var(--text-color);
      font-weight: 700;
    }

    ._aaai,
    ._aaai:visited {
      color: linkColor;
    }

    .x1wzhzgj {
      border-top: 1px solid var(--border-color);
    }

    a._aa--,
    a._aa--:visited {
      color: var(--text-color);
    }

    /* Dialog */
    .xxfnqb6,
    ._a9-z:only-child {
      background-color: var(--dark);
    }

    ._ad8j._aa5x._aa5-,
    ._ad8j._aa5x._aa5- ._aa61,
    ._ad8j._aa5x._aa5- ._aa62 {
      background: var(--darker) !important;
    }

    ._ad8j._aa5x._aa5- ._abm4:hover {
      background: var(--dark) !important;
    }

    ._a9_1 {
      color: var(--text-color);
      border-top: 1px solid var(--border-color);
    }

    ._a9--,
    .x1fvbc88,
    .xsgn9v4 {
      border-top: 1px solid var(--border-color);
    }

    ._ac76 {
      border-bottom: 1px solid var(--border-color);
    }

    ._ac78 {
      color: var(--text-color);
    }

    hr._aest {
      background-color: var(--border-color);
    }

    /* Explore */
    /* Search input */
    ._aaw8,
    ._aauy,
    ._ad8j._ach4._aa5x._aa5y._aa5z ._aa61 {
      background: var(--dark) !important;
      color: var(--text-color);
    }

    ._ad8j._ach4._aa5x._aa5y._aa5z ._aa62 {
      background: var(--dark);
    }

    ._abm4:hover,
    ._abn_ {
      background: var(--darker);
    }

    /* Reels */
    .x1ho3rtd {
      background: var(--darker);
    }

    section._aiiy {
      border: 1px solid var(--border-color);
    }

    /* Messages */
    ._ab8j {
      max-width: calc(100vw - 725px) !important;
    }
    ._aa5c,
    ._aa4j,
    ._abyk,
    ._ab8s,
    ._ab5x > div:nth-child(2) {
      background-color: var(--dark);
    }

    ._ab8o {
      background-color: var(--darker);
    }

    ._ab5w {
      background: var(--darker);
    }

    ._ab8j,
    ._ac1r,
    ._acfl {
      border: 1px solid var(--border-color);
      background-color: var(--dark);
    }

    ._aa4j {
      border-bottom: 1px solid var(--border-color);
    }

    ._aa5c {
      border-right: 1px solid var(--border-color);
    }

    ._acrb {
      border: 1px solid var(--border-color);
      background-color: var(--darker);
    }

    ._acrb textarea {
      color: var(--text-color);
    }

    /* User profile pop-up (hover) */
    ._aap3 {
      box-shadow: 0 2px 16px 0 rgba(0, 0, 0, .2), 0 0 0 1px #2d2d2d;
    }

    ._aazw {
      border-bottom: 1px solid var(--border-color);
    }

    ._aacl._aaco._aacu._aacy._aad6._aade {
      margin-top: .5rem;
    }

    a[rel="me nofollow noopener noreferrer"] {
      color: linkColor;
      font-weight: 700;
    }

    ._ab5d {
      border-color: var(--border-color);
    }

    ._9-_z {
      filter: invert(1);
    }

    ._acas:not(._acao),
    a._acas:not(._acao),
    a._acas:not(._acao):visited {
      background-color: var(--darker);
      border: 1px solid var(--border-color);
    }
  }

  /* Light */
  lightStyling() {
    /* Cards */
    ._aac6,
    ._ab6k,
    ._aak3 {
      box-shadow: rgba(140, 149, 159, 0.15) 0px 3px 6px 0px;
    }
    ._aak3 {
      border: 1px solid #dbdbdb;
      border-radius: 8px;
      margin-top: 3rem;
    }

    /* Suggested for you */
    ._aba7 {
      padding: 1rem;
    }

    ._aak3,
    ._ab8q {
      background: #fff;
    }
  }

  /* Conditions */
  if theme==dark {
    darkStyling();
  }
  else if theme==light {
    lightStyling();
  }
  else if theme==system {
    @media (prefers-color-scheme: dark) {
      darkStyling();
    }

    @media (prefers-color-scheme: light) {
      lightStyling();
    }
  }
}

